*	Some fixes related to inheritance of ant eXist libs. *	www code has been moved there.
git-svn-id: svn://montblanc.cnio.es/trunk/projects/GOPHER@1648 b091869f-ef14-0410-ae3d-fae7310851ef